- Fixed a crashbug introduced by +mu fixes 3 days ago (#0001237).
- Fixed a typo where /knock would say the channel is +I if +V is set, reported by Certus
- Improved SSL error msg sent to junk snomask.
- Fixed Q:lined nickname msgs during linking and a debug fix.
- Fixed a SVSMOTD crashbug (removing of motd).
- Fix-for-fix-for-+mu-fix (it was still crashing)... don't ask.
- Minor +f code tweaks.
- Added checks for ipv4 listen lines on ipv6 compile.
- Finished some of the extcmode code (memleaks).
- Fixed a problem in the new win32 resolver code
- Added HOOKTYPE_UNKUSER_QUIT (disconnects of unregistered clients).
- Fixed a Linux PPC problem (#0001242)
- Made the win32 version use libtre for regex rather than GNU regex
  libtre is smaller, faster, and more feature rich.
- Fixed some issues regarding unsetting of -R/-M when server set that mode due to a flood (+f),
  it would set the mode back immediately after next msg/join, counters are now reset.
- Updated documentation
- Added set::default-bantime. It allows you to set the default time for a gline/kline/gzline/
  shun/etc when the time is not not specified (like with /gline *@*.stupid.net).
- Added HOOKTYPE_LOCAL_PASS and HOOKTYPE_REMOTE_CONNECT
- Added HOOKTYPE_REMOTE_QUIT
- Added beta18 release notes (might be changed)
- Added HOOKTYPE_REHASHFLAG (triggered when /rehash is passed a flag)
- Fix for HOOKTYPE_REMOTE_QUIT (was called for local quits too)
- Redid the join/kick/topic hooks
- Added a few macros (MOD_HEADER, MOD_INIT, MOD_TEST, MOD_LOAD, MOD_UNLOAD) to make
  setting up a module for both static and dynamic linking easier
- Fixed a win32 resolver lockup bug
- Fixed hunt_server* bug
- Very Very small change to doc/example.conf
- Updated .CHANGES.NEW to read Beta18
- Minor doc update.
- Updated all the modules to use the new macros
- Changed version to 'beta18'
- Fixed a problem with tre.dll
- Rewrote some of the message searching code to make it roughly 25% faster
- Minor botmotd-on-mode+B fix.