@@ -2444,3 +2444,4 @@ seen. gmtime warning still there
 - Fixed a problem with tre.dll
 - Rewrote some of the message searching code to make it roughly 25% faster
 - Minor botmotd-on-mode+B fix.
+- Added a "command override" system for modules (experimental)
